[package]
name = "s3ite"
version = "0.4.0"
edition = "2021"
description = "An S3 server backed by SQLite"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/seddonm1/s3ite"
keywords = ["s3", "sqlite"]
categories = ["database"]

[features]
default = ["binary"]
binary = ["tokio/full", "clap", "tracing-subscriber", "hyper"]

[dependencies]
async-trait = "0.1.74"
base64-simd = "0.8.0"
bytes = "1.5.0"
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock"] }
clap = { version = "4.4.8", optional = true, features = ["derive"] }
deadpool-sqlite = { version = "0.7.0", default-features = false, features = ["rt_tokio_1"] }
rusqlite = { version = "0.30.0", features = ["time", "uuid", "bundled"] }
futures = "0.3.29"
hex-simd = "0.8.0"
hyper = { version = "0.14.27", optional = true, features = ["full"] }
md-5 = "0.10.6"
mime = "0.3.17"
nugine-rust-utils = "0.3.1"
numeric_cast = "0.2.1"
path-absolutize = "3.1.1"
s3s = "0.8.0"
serde = { version = "1.0.192", features =["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
thiserror = "1.0.50"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["fs", "io-util"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", optional = true, features = ["env-filter", "time"] }
transform-stream = "0.3.0"
uuid = { version = "1.5.0", features = ["v4"] }

[dev-dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
aws-config = "0.56.1"
aws-credential-types = { version = "0.56.1", features = ["test-util"] }
aws-sdk-s3 = "0.34.0"
once_cell = "1.18.0"
s3s-aws =  "0.8.0"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }

[profile.release]
codegen-units = 1
opt-level = 3
