[package]
name = "s3ite"
version = "0.5.0"
edition = "2021"
description = "An S3 server backed by SQLite"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/seddonm1/s3ite"
keywords = ["s3", "sqlite"]
categories = ["database"]

[features]
default = ["binary"]
binary = ["tokio/full", "clap", "tracing-subscriber", "hyper", "hyper-util"]

[dependencies]
async-trait = "0.1.81"
base64-simd = "0.8.0"
bytes = "1.7.1"
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "clock",
] }
clap = { version = "4.5.15", optional = true, features = ["derive"] }
crossbeam-channel = "0.5.13"
futures = "0.3.30"
hex-simd = "0.8.0"
hyper = { version = "1.4.1", optional = true, features = ["full"] }
hyper-util = { version = "0.1.7", optional = true, features = [
    "http1",
    "http2",
    "server-auto",
    "server-graceful",
    "service",
    "tokio",
] }
md-5 = "0.10.6"
mime = "0.3.17"
nugine-rust-utils = "0.3.1"
numeric_cast = "0.2.1"
path-absolutize = "3.1.1"
rusqlite = { version = "0.32.1", features = ["time", "uuid", "bundled"] }
s3s = { version = "0.10.1", features = ["tower"] }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1.39.2", features = ["fs", "io-util"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", optional = true, features = [
    "env-filter",
    "time",
] }
transform-stream = "0.3.0"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
s3s-aws = "0.10.1"
anyhow = { version = "1.0.86", features = ["backtrace"] }
aws-config = { version = "1.5.5", default-features = false }
aws-credential-types = { version = "1.2.0", features = ["test-util"] }
aws-sdk-s3 = { version = "1.43.0", features = ["behavior-version-latest"] }
once_cell = "1.19.0"
tokio = { version = "1.39.2", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }

[profile.release]
codegen-units = 1
opt-level = 3
