[package]
name = "s3ite"
version = "0.6.0"
edition = "2021"
description = "An S3 server backed by SQLite"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/seddonm1/s3ite"
keywords = ["s3", "sqlite"]
categories = ["database"]

[features]
default = ["binary"]
binary = ["tokio/full", "clap", "tracing-subscriber", "hyper", "hyper-util"]

[dependencies]
async-trait = "0.1.88"
base64-simd = "0.8.0"
bytes = "1.10.1"
chrono = { version = "0.4.41", default-features = false, features = [
    "std",
    "clock",
] }
clap = { version = "4.5.40", optional = true, features = ["derive"] }
crossbeam-channel = "0.5.15"
futures = "0.3.31"
hex-simd = "0.8.0"
hyper = { version = "1.6.0", optional = true, features = ["full"] }
hyper-util = { version = "0.1.14", optional = true, features = [
    "http1",
    "http2",
    "server-auto",
    "server-graceful",
    "service",
    "tokio",
] }
md-5 = "0.10.6"
mime = "0.3.17"
nugine-rust-utils = "0.3.1"
numeric_cast = "0.3.0"
path-absolutize = "3.1.1"
rusqlite = { version = "0.36.0", features = ["time", "uuid", "bundled"] }
s3s = { version = "0.11.0", features = ["tower"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.33"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["fs", "io-util"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", optional = true, features = [
    "env-filter",
    "time",
] }
transform-stream = "0.3.1"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
s3s-aws = "0.11.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
aws-config = { version = "1.8.0", default-features = false }
aws-credential-types = { version = "1.2.3", features = ["test-util"] }
aws-sdk-s3 = { version = "1.92.0", features = ["behavior-version-latest"] }
once_cell = "1.21.3"
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }

[profile.release]
codegen-units = 1
opt-level = 3
